//// ------------------------------------------------------
//// THIS FILE WAS AUTOMATICALLY GENERATED (DO NOT MODIFY)
//// ------------------------------------------------------

Table users {
  id String [pk]
  name String
  email String [unique, not null]
  password String [not null]
  emailVerified DateTime
  image String
  phone String
  locale String [not null, default: 'en']
  timezone String [not null, default: 'UTC']
  currency String [not null, default: 'EUR']
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  accounts accounts [not null]
  business businesses
  subscription subscriptions
  alerts alerts [not null]
}

Table accounts {
  id String [pk]
  userId String [not null]
  type String [not null]
  provider String [not null]
  providerAccountId String [not null]
  refresh_token String
  access_token String
  expires_at Int
  token_type String
  scope String
  id_token String
  session_state String
  user users [not null]

  indexes {
    (provider, providerAccountId) [unique]
  }
}

Table businesses {
  id String [pk]
  userId String [unique, not null]
  user users [not null]
  name String [not null]
  address String
  city String
  country String
  phone String
  email String
  logo String
  website String
  currency String [not null, default: 'EUR']
  timezone String [not null, default: 'UTC']
  locale String [not null, default: 'en']
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  stores stores [not null]
}

Table stores {
  id String [pk]
  businessId String [not null]
  business businesses [not null]
  name String [not null]
  address String
  city String
  country String
  phone String
  email String
  image String
  isActive Boolean [not null, default: true]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  products products [not null]
  ingredients ingredients [not null]
  recipes recipes [not null]
  suppliers suppliers [not null]
  orders orders [not null]
  productionBatches production_batches [not null]
}

Table subscriptions {
  id String [pk]
  userId String [unique, not null]
  user users [not null]
  stripeCustomerId String [unique, not null]
  stripeSubscriptionId String [unique]
  stripePriceId String
  plan SubscriptionPlan [not null, default: 'STARTER']
  status SubscriptionStatus [not null, default: 'INCOMPLETE']
  currentPeriodStart DateTime
  currentPeriodEnd DateTime
  cancelAtPeriodEnd Boolean [not null, default: false]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
}

Table products {
  id String [pk]
  storeId String [not null]
  store stores [not null]
  sku String [unique, not null]
  name String [not null]
  description String
  category String
  image String
  costPrice Decimal [not null]
  sellingPrice Decimal [not null]
  currentStock Decimal [not null, default: 0]
  unit String [not null, default: 'piece']
  minStockLevel Decimal [not null, default: 0]
  criticalLevel Decimal
  productionTime Int
  shelfLife Int
  isActive Boolean [not null, default: true]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  recipe recipes
  stockMovements stock_movements [not null]
  productionBatches production_batches [not null]
  orderItems order_items [not null]
}

Table ingredients {
  id String [pk]
  storeId String [not null]
  store stores [not null]
  sku String [unique, not null]
  name String [not null]
  description String
  category String
  image String
  unit String [not null, default: 'kg']
  unitCost Decimal [not null]
  currentStock Decimal [not null, default: 0]
  minStockLevel Decimal [not null, default: 0]
  criticalLevel Decimal
  supplierId String
  supplier suppliers
  isActive Boolean [not null, default: true]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  recipeIngredients recipe_ingredients [not null]
  stockMovements stock_movements [not null]
}

Table recipes {
  id String [pk]
  storeId String [not null]
  store stores [not null]
  productId String [unique, not null]
  product products [not null]
  batchSize Decimal [not null]
  batchUnit String [not null, default: 'piece']
  instructions String
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  ingredients recipe_ingredients [not null]
  productionBatches production_batches [not null]
}

Table recipe_ingredients {
  id String [pk]
  recipeId String [not null]
  recipe recipes [not null]
  ingredientId String [not null]
  ingredient ingredients [not null]
  quantity Decimal [not null]
  unit String [not null]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]

  indexes {
    (recipeId, ingredientId) [unique]
  }
}

Table production_batches {
  id String [pk]
  storeId String [not null]
  store stores [not null]
  batchNumber String [unique, not null]
  productId String [not null]
  product products [not null]
  recipeId String
  recipe recipes
  plannedQuantity Decimal [not null]
  actualQuantity Decimal
  unit String [not null]
  status ProductionStatus [not null, default: 'PLANNED']
  scheduledDate DateTime [not null]
  completedDate DateTime
  notes String
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  stockMovements stock_movements [not null]
}

Table stock_movements {
  id String [pk]
  productId String
  product products
  ingredientId String
  ingredient ingredients
  type MovementType [not null]
  quantity Decimal [not null]
  unit String [not null]
  balanceAfter Decimal [not null]
  orderId String
  order orders
  productionBatchId String
  productionBatch production_batches
  notes String
  createdAt DateTime [default: `now()`, not null]
}

Table suppliers {
  id String [pk]
  storeId String [not null]
  store stores [not null]
  name String [not null]
  contactPerson String
  email String
  phone String
  address String
  city String
  country String
  notes String
  isActive Boolean [not null, default: true]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  ingredients ingredients [not null]
}

Table orders {
  id String [pk]
  storeId String [not null]
  store stores [not null]
  orderNumber String [unique, not null]
  customerName String [not null]
  customerEmail String
  customerPhone String
  deliveryAddress String
  status OrderStatus [not null, default: 'PENDING']
  orderDate DateTime [default: `now()`, not null]
  dueDate DateTime
  deliveredDate DateTime
  subtotal Decimal [not null]
  tax Decimal [not null, default: 0]
  delivery Decimal [not null, default: 0]
  total Decimal [not null]
  notes String
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  items order_items [not null]
  stockMovements stock_movements [not null]
}

Table order_items {
  id String [pk]
  orderId String [not null]
  order orders [not null]
  productId String [not null]
  product products [not null]
  quantity Decimal [not null]
  unit String [not null]
  unitPrice Decimal [not null]
  total Decimal [not null]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
}

Table alerts {
  id String [pk]
  userId String [not null]
  user users [not null]
  type AlertType [not null]
  severity AlertSeverity [not null, default: 'INFO']
  title String [not null]
  message String [not null]
  entityType String
  entityId String
  isRead Boolean [not null, default: false]
  createdAt DateTime [default: `now()`, not null]
}

Enum SubscriptionPlan {
  STARTER
  PRO
  ENTERPRISE
}

Enum SubscriptionStatus {
  ACTIVE
  CANCELED
  PAST_DUE
  INCOMPLETE
}

Enum ProductionStatus {
  PLANNED
  IN_PROGRESS
  COMPLETED
  CANCELLED
}

Enum MovementType {
  PURCHASE
  PRODUCTION_IN
  PRODUCTION_OUT
  SALE
  ADJUSTMENT
  WASTE
}

Enum OrderStatus {
  PENDING
  CONFIRMED
  IN_PRODUCTION
  READY
  DELIVERED
  CANCELLED
}

Enum AlertType {
  LOW_STOCK
  CRITICAL_STOCK
  ORDER_DUE
  PRODUCTION_DUE
  SYSTEM
}

Enum AlertSeverity {
  INFO
  WARNING
  CRITICAL
}

Ref: accounts.userId > users.id [delete: Cascade]

Ref: businesses.userId - users.id [delete: Cascade]

Ref: stores.businessId > businesses.id [delete: Cascade]

Ref: subscriptions.userId - users.id [delete: Cascade]

Ref: products.storeId > stores.id [delete: Cascade]

Ref: ingredients.storeId > stores.id [delete: Cascade]

Ref: ingredients.supplierId > suppliers.id [delete: Set Null]

Ref: recipes.storeId > stores.id [delete: Cascade]

Ref: recipes.productId - products.id [delete: Cascade]

Ref: recipe_ingredients.recipeId > recipes.id [delete: Cascade]

Ref: recipe_ingredients.ingredientId > ingredients.id [delete: Cascade]

Ref: production_batches.storeId > stores.id [delete: Cascade]

Ref: production_batches.productId > products.id [delete: Cascade]

Ref: production_batches.recipeId > recipes.id [delete: Set Null]

Ref: stock_movements.productId > products.id [delete: Cascade]

Ref: stock_movements.ingredientId > ingredients.id [delete: Cascade]

Ref: stock_movements.orderId > orders.id [delete: Set Null]

Ref: stock_movements.productionBatchId > production_batches.id [delete: Set Null]

Ref: suppliers.storeId > stores.id [delete: Cascade]

Ref: orders.storeId > stores.id [delete: Cascade]

Ref: order_items.orderId > orders.id [delete: Cascade]

Ref: order_items.productId > products.id [delete: Cascade]

Ref: alerts.userId > users.id [delete: Cascade]